# vana-dlp-chatgpt

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile.validator  README.md  docker-compose.yml  keygen.sh  pyproject.toml  setup.py  vanacli
.github/workflows/: publish.yml  test.yml
chatgpt/: __init__.py  dlp-implementation-abi.json  dlp-token-implementation-abi.json  protocol.py
chatgpt/commands/: approve_validator.py  register.py  register_validator.py
chatgpt/models/: chatgpt.py  contribution.py
chatgpt/nodes/: base_node.py  validator.py
chatgpt/utils/: config.py  misc.py  proof_of_contribution.py  rpc_utils.py  validator.py
docs/: proof_of_contribution.md  running_on_testnet.md
hotdog/: __init__.py
hotdog/commands/: approve_validator.py  register_validator.py
hotdog/nodes/: base_node.py  validator.py
hotdog/utils/: proof_of_contribution.py  validator.py
scripts/: deploy.sh  env.sh  publish.sh  startup.sh
tests/: similarity.py
tests/chatgpt/nodes/: test_validator.py
tests/chatgpt/utils/: test_proof_of_contribution.py
tests/hotdog/nodes/: test_validator.py
tests/hotdog/utils/: test_proof_of_contribution.py
tests/unit_tests/utils/: test_proof_of_contribution.py
