[tool.poetry]
name = "vana-dlp-chatgpt"
version = "0.1.0"
description = ""
authors = ["Tim Nunamaker <tim@vana.com>", "Volodymyr Isai <volod@vana.com>", "Kahtaf Alam <kahtaf@vana.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.4"
tabulate = "^0.9.0"
python-dotenv = "^1.0.1"
redis = "^5.0.4"
zmq = "^0.0.0"
openai = "^1.25.0"
pydantic = "^2.7.1"
python-gnupg = "^0.5.2"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
munch = "^4.0.0"
aiohttp = "^3.9.5"
colorama = "^0.4.6"
python-statemachine = "^2.2.0"
retry = "^0.9.2"
ansible-vault = "^2.1.0"
ansible = "^9.5.1"
password-strength = "^0.0.3.post2"
rich = "^13.7.1"
netaddr = "^1.2.1"
web3 = "^6.18.0"
shtab = "^1.7.1"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
